--- a/style.css
+++ b/style.css
@@ -1,7 +1,57 @@
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
 }
- h1 {
-    font-size: 32px;
+
+h1 {
+    font-size: 2em; /* 1rem = 16px -> 1em = "M" */
     font-weight: bold;
- }
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+header {
+    background-color: #360707;
+    padding: 1rem 2rem 1rem 2rem;
+    box-shadow: 0px 4px 8px #0000001a;
+    position: sticky; /* pode ser necessário top, left, bottom ou right */
+    top: 0;
+}
+
+header ul {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+header a {
+    color:#ffffff;
+    font-weight: 700;
+    padding: .5rem 1rem;
+}
+
+header a:hover {
+    background-color: #4a0b0b;
+
+}
+section {
+    height: 80vh;
+    margin: 2rem;
+    scroll-margin-top: 4rem;
+    padding: 1rem;
+    border: 2px solid black;
+    /*overflow: hidden;*/
+}
+
+p {
+    margin-bottom: 1rem;
+}
+.place {
+    background-color: white;
+    border: 2px solid white;
+    border-color: white;
+    margin-bottom: 20px;
+    padding: 2px;
+}
